fixed examples alignment

--- a/app/assets/stylesheets/stalk.css.scss
+++ b/app/assets/stylesheets/stalk.css.scss
@@ -80,6 +80,11 @@ input[type=submit] {
 .help{
   color:gray;
   font-size:0.7em;
+  width:500px;
+  text-align:left;
+  float:center;
+  margin:auto;
+
 }
 .notice
 {
